--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ p{
     <div class="grid w-full md:grid-cols-2">
 
       <div class="myimg md:hidden">
-        <img src="/IMAGES/boy2.jpg" alt=""  class="mx-auto border-2 border-[#f70000] mt-9 borderring " id="borderring ">
+        <img src="IMAGES/boy2.jpg" alt=""  class="mx-auto border-2 border-[#f70000] mt-9 borderring " id="borderring ">
       </div>
 
       <div class="description md:mt-[150px] md:ml-[100px] ml-4">
@@ -150,7 +150,7 @@ p{
       </div>
 
       <div class="z-10 hidden myimg md:inline ">
-        <img src="/IMAGES/boy2.jpg" alt=""  class="w-3/5 mx-auto border-2 border-[#f70000] mt-9 borderring " id="borderring">
+        <img src="IMAGES/boy2.jpg" alt=""  class="w-3/5 mx-auto border-2 border-[#f70000] mt-9 borderring " id="borderring">
       </div>
 
     </div>
@@ -168,7 +168,7 @@ p{
 
       <div class="flex-shrink-0 w-4/5 mr-4 bg-white card2 md:m-4 boxshadow md:w-1/4">
         <div class="top-image">
-          <img src="/IMAGES/servies/coading.png" alt="">
+          <img src="IMAGES/servies/coading.png" alt="">
         </div>
   
         <div class="deatails">
