--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ p{
 
   <!--Hero Section Start ording-->
   <div class="w-full h-screen herosection">
-    <img src="/IMAGES/download (1).png" alt="" class="absolute z-0">
+    <img src="IMAGES/download (1).png" alt="" class="absolute z-0">
 
     <div class="grid w-full md:grid-cols-2">
 
@@ -183,7 +183,7 @@ p{
       
       <div class="flex-shrink-0 w-4/5 mr-4 bg-white md:w-1/4 card2 md:m-4 boxshadow ">
         <div class="top-image">
-          <img src="/IMAGES/servies/ux.png" alt="">
+          <img src="IMAGES/servies/ux.png" alt="">
         </div>
   
         <div class="deatails">
@@ -200,7 +200,7 @@ p{
       
       <div class="flex-shrink-0 w-4/5 mr-4 bg-white md:w-1/4 card2 md:m-4 boxshadow ">
         <div class="top-image">
-          <img src="/IMAGES/servies/g-design.png" alt="">
+          <img src="IMAGES/servies/g-design.png" alt="">
         </div>
   
         <div class="deatails">
@@ -350,7 +350,7 @@ p{
 
       <div class="w-full md:w-[360px]  border-none rounded-xl bg-[#090325] mt-10 ">
         <div class="flex justify-center w-full pt-10 pl-6 pr-6 top-img">
-          <img src="/IMAGES/project/project UI .jpg" alt="" class="rounded-xl ">
+          <img src="IMAGES/project/project UI .jpg" alt="" class="rounded-xl ">
         </div>
         <div class="card4body">
           <h1 class="mt-8 ml-5 text-2xl font-bold text-white poppins ">AI Plants</h1>
@@ -365,7 +365,7 @@ p{
 
       <div class="w-full md:w-[360px] border-none rounded-xl bg-[#090325] mt-10">
         <div class="flex justify-center w-full pt-10 pl-6 pr-6 top-img">
-          <img src="/IMAGES/project/Ai plants.jpg" alt="" class="rounded-xl ">
+          <img src="IMAGES/project/Ai plants.jpg" alt="" class="rounded-xl ">
         </div>
         <div class="card4body">
           <h1 class="mt-8 ml-5 text-2xl font-bold text-white poppins ">AI Plants</h1>
@@ -380,7 +380,7 @@ p{
 
       <div class="w-full md:w-[360px]  border-none rounded-xl bg-[#090325] mt-10">
         <div class="flex justify-center w-full px-6 pt-10 top-img">
-          <img src="/IMAGES/project/project UI .jpg" alt="" class="rounded-xl ">
+          <img src="IMAGES/project/project UI .jpg" alt="" class="rounded-xl ">
         </div>
         <div class="card4body">
           <h1 class="mt-8 ml-5 text-2xl font-bold text-white poppins ">AI Plants</h1>
